grammar.js
    module: $ => repeat($._statement),

    _statement: $ => choice($._simple_statements, $._compound_statement),

    // -----------------------------------------------------------------------
    // Simple statements

    return_statement: $ => seq('return', optional($._expressions)),
    pass_statement: _ => prec.left('pass'),
    comptime_statement: $ =>
      seq(
        choice('comptime', 'type'),
        choice(
          field('left', $.constrained_comptime_parameter),
          seq(
            field(
              'left',
              choice($.comptime_parameter, $.constrained_comptime_parameter),
            ),
            seq('=', field('right', $._comptime_rhs)),
          ),
        ),
      ),

    // -----------------------------------------------------------------------
    // Compound statements

    if_statement: $ =>
      seq(
        $._if_statement_header,
        ':',
        field('consequence', $._suite),
        repeat(field('alternative', $.elif_clause)),
        optional(field('alternative', $.else_clause)),
      ),
    _if_statement_header: $ => seq(optional('comptime'), $._if_clause),
    function_declaration: $ =>
      seq($.function_signature, ':', field('body', $._suite)),

    function_signature: $ =>
      seq(
        optional('async'),
        'def',
        $._comptime_parameter,
        field('arguments', $.callable_parameters),
        field('effects', optional($.function_effects)),
        field('captures', optional($.capture_parameters)),
        optional($._function_return_type),
        optional($._where_clauses),
      ),

    function_effects: $ => repeat1($._function_effect),
    _function_effect: $ => choice($.raises, $.abi, $.thin),

    raises: $ =>
      prec.right(
        seq('raises', field('error_type', optional($._standalone_parameter))),
      ),

    abi: $ => seq('abi', '(', $.string, ')'),

    _function_return_type: $ =>
      seq(
        '->',
        optional($._parameterized_ref_conv),
        field('return_type', $._return_parameter),
      ),

    _suite: $ =>
      choice(
        alias($._newline, $.block),
        seq($._indent, $.block),
        alias($._simple_statements, $.block),
      ),

    block: $ => seq(repeat($._statement), $._dedent),

    // -----------------------------------------------------------------------
    // Parameters declaration

    comptime_parameter: $ =>
      seq($._comptime_parameter, optional($._where_clauses)),

    _comptime_parameter: $ =>
      seq(
        $._parameter_decl,
        field('parameters', optional($.parameters_declaration)),
      ),

    parameters_declaration: $ =>
      seq('[', trailingCommaSep1($.parameter_declaration), ']'),

    capture_parameters: $ =>
      seq('{', optional(trailingCommaSep1($.capture_parameter)), '}'),

    capture_parameter: $ => choice($._ref_capture, $._owned_capture),

    _ref_capture: $ =>
      choice(seq($._ref_conv, optional($._parameter_decl)), $._parameter_decl),

    _owned_capture: $ =>
      choice(
        seq($._parameter_decl, '^'),
        seq('var', optional($._parameter_decl), optional('^')),
      ),

    // -----------------------------------------------------------------------
    // Function type

    function_type: $ =>
      seq(
        'def',
        field('parameters', optional($.parameters_declaration)),
        field('arguments', $.function_type_parameters),
        field('effects', optional($.function_effects)),
        optional($._function_return_type),
      ),

    function_type_parameters: $ =>
      seq('(', optional(trailingCommaSep1($._function_type_parameter)), ')'),

    _function_type_parameter: $ =>
      seq(optional($._convention), $.function_type_parameter),

    callable_parameters: $ =>
      seq('(', optional(trailingCommaSep1($._callable_parameter)), ')'),

    _callable_parameter: $ =>
      seq(optional($._convention), $.callable_parameter),

    default_parameter_decl: $ =>
      seq(
        choice($.constrained_parameter_decl, $._parameter_decl),
        '=',
        field('default', $._parameter_rhs),
      ),

    constrained_parameter_decl: $ => seq($._parameter_decl, $._constraint),

    constrained_variadic_parameter_decl: $ =>
      seq($._variadic_parameter_decl, $._constraint),

    // -----------------------------------------------------------------------
    // Lambda parameters

    parameter_decl: $ => $._parameter_decl,
    _parameter_decl: $ =>
      field('name', choice($.identifier, $.escaped_identifier)),

    _variadic_parameter_decl: $ => seq(choice('*', '**'), $._parameter_decl),

    // -----------------------------------------------------------------------
    // Conformance

    _where_clauses: $ => repeat1($.where_clause),
    parameters: $ =>
      seq('[', optional(trailingCommaSep1($.parameter_expression)), ']'),

    parameter_composition: $ =>
      seq($._composable_parameter, repeat1(seq('&', $._composable_parameter))),

    _composable_parameter: $ =>
      choice($.function_type, $._non_composite_parameter),

    named_parameter: $ =>
      seq(
        $._parameter_decl,
        '=',
        field('value', choice($.function_type, $._parameter_rhs)),
      ),

    variadic_parameter: $ =>
      seq(
        choice('*', '**'),
        choice($._non_composite_parameter, $.parameter_member),
      ),

    parameter: $ => choice($.identifier, $.self),
    _non_composite_parameter: $ =>
      choice($.parameter, alias($.subscript, $.generic_parameter)),

    parameter_member: $ => $.member_access,

    _comptime_rhs: $ =>
      choice(
        $.function_type,
        $.mlir_attr,
        $.mlir_type,
        $.parameter_union,
        $.parameter_composition,
        $._standalone_parameter,
      ),

    _parameter_rhs: $ =>
      choice($.mlir_attr, $.mlir_type, $._standalone_parameter, $.slice),

    _constraint: $ => seq(':', field('constraint', $._constraint_parameter)),
    _standalone_parameter: $ =>
      choice($._non_composite_parameter, $.parameter_member, $.expression),

    // -----------------------------------------------------------------------
    // Arguments

    arguments: $ => seq('(', optional($._arguments), ')'),
    _arguments: $ => trailingCommaSep1($.argument),
    keyword_argument: $ =>
      seq(
        field('name', $._identifier),
        '=',
        field('value', choice($.mlir_attr, $.expression)),
      ),

    // -----------------------------------------------------------------------
    // Assignment

    assignment: $ =>
      seq(
        optional($._declaration_convention),
        choice(
          field('left', $.constrained_lhs),
          seq(
            field('left', choice($.constrained_lhs, $._lhs)),
            seq('=', field('right', $._rhs)),
          ),
        ),
      ),
    _declaration_convention: $ => choice('var', 'ref'),
    _lhs: $ => choice($.pattern_list, $.pattern, $.call),
    _rhs: $ =>
      choice(
        $.mlir_attr,
        $.assignment,
        $.augmented_assignment,
        $.pattern_list,
        $.yield,
        $.expression_list,
        $.expression,
      ),

    parenthesized_expression: $ =>
      seq(optional('comptime'), seq('(', choice($.yield, $.expression), ')')),

    initializer_list: $ => seq('{', optional($._arguments), '}'),
    _expressions: $ => choice($.mlir_attr, $.expression_list, $.expression),

    lambda: $ =>
      seq(
        'lambda',
        field('arguments', optional($.lambda_parameters)),
        ':',
        field('body', $.expression),
      ),

    transfer_operator: $ => seq(field('argument', $.primary_expression), '^'),

    binary_operator: $ => {
      const table = [
        [prec.right, 'exponentiation', '**'],
        [prec.left, 'multiplicative', '*'],
        [prec.left, 'multiplicative', '@'],
        [prec.left, 'multiplicative', '/'],
        [prec.left, 'multiplicative', '//'],
        [prec.left, 'multiplicative', '%'],
        [prec.left, 'additive', '+'],
        [prec.left, 'additive', '-'],
        [prec.left, 'bitwise_shift', '<<'],
        [prec.left, 'bitwise_shift', '>>'],
        [prec.left, 'bitwise_and', '&'],
        [prec.left, 'bitwise_xor', '^'],
        [prec.left, 'bitwise_or', '|'],
      ];

      // @ts-ignore
      return choice(
        ...table.map(([fn, precedence, operator]) =>
          fn(
            precedence,
            seq(
              field('left', $.primary_expression),
              // @ts-ignore
              field('operator', operator),
              field('right', $.primary_expression),
            ),
          ),
        ),
      );
    },

    member_access: $ =>
      prec(
        'call',
        seq(
          field('value', choice($._primary, $.transfer_operator)),
          repeat1(seq('.', field('member', $._member))),
        ),
      ),

    _member: $ =>
      choice(
        $.member_call,
        $.member_subscript,
        $.escaped_identifier,
        $._identifier,
      ),

    call: $ =>
      prec(
        'call',
        seq(
          field('function', $._primary),
          field('arguments', choice($.arguments, $.generator_expression)),
        ),
      ),

    member_call: $ =>
      prec(
        'call',
        seq(
          field('function', $._member),
          field('arguments', choice($.arguments, $.generator_expression)),
        ),
      ),

    subscript: $ =>
      prec(
        'call',
        seq(field('value', $._primary), field('parameters', $.parameters)),
      ),

    member_subscript: $ =>
      prec(
        'call',
        seq(field('value', $._member), field('parameters', $.parameters)),
      ),

    _primary: $ => choice($.call, $.mlir_op, $.subscript, $._atom),
    string: $ =>
      seq(
        $.string_start,
        repeat(choice($.interpolation, $.string_content)),
        $.string_end,
      ),

    string_content: $ =>
      prec.right(
        repeat1(
          choice(
            $._string_content,
            $.escape_interpolation,
            $.escape_sequence,
            $._not_escape_sequence,
          ),
        ),
      ),

    _not_escape_sequence: _ => token.immediate('\\'),

    integer: _ =>
      token(
        choice(
          seq(choice('0x', '0X'), repeat1(/_?[A-Fa-f0-9]+/), optional(/[Ll]/)),
          seq(choice('0o', '0O'), repeat1(/_?[0-7]+/), optional(/[Ll]/)),
          seq(choice('0b', '0B'), repeat1(/_?[0-1]+/), optional(/[Ll]/)),
          seq(
            repeat1(/[0-9]+_?/),
            choice(
              optional(/[Ll]/), // long numbers
              optional(/[jJ]/), // complex numbers
            ),
          ),
        ),
      ),

    identifier: _ => /[_\p{XID_Start}][_\p{XID_Continue}]*/,
    escaped_identifier: $ => seq('`', $.escaped_identifier_content, '`'),

    _identifier: $ => choice($.identifier, alias('match', $.identifier)),

    // -----------------------------------------------------------------------
    // Literals

    none: _ => 'None',
    self: _ => 'Self',

    thin: _ => 'thin',

    ellipsis: _ => '...',

    infer_only_marker: _ => '//',
    positional_only_marker: _ => '/',
    keyword_only_marker: _ => '*',
