test/corpus/mojo/expressions.txt
================================================================================
Identifier: escaped
================================================================================

`name`

`struct`

`日本語の変数`

`my value`

--------------------------------------------------------------------------------

(module
  (escaped_identifier
    (escaped_identifier_content))
  (escaped_identifier
    (escaped_identifier_content))
  (escaped_identifier
    (escaped_identifier_content))
  (escaped_identifier
    (escaped_identifier_content)))

================================================================================
Operator: transfer
================================================================================

def __init__(out self, var value: Self.T):
    self.value = value^

--------------------------------------------------------------------------------

(module
  (function_declaration
    (function_signature
      name: (identifier)
      arguments: (callable_parameters
        (parameter_decl
          name: (identifier))
        (constrained_parameter_decl
          name: (identifier)
          constraint: (parameter_member
            value: (self)
            member: (identifier)))))
    body: (block
      (assignment
        left: (member_access
          value: (identifier)
          member: (identifier))
        right: (transfer_operator
          argument: (identifier))))))

================================================================================
Collection displays: initializer list
================================================================================

def make() -> Self:
    return {ptr = self._ptr, length = len(self)}

process({1, message="hello"})

--------------------------------------------------------------------------------

(module
  (function_declaration
    (function_signature
      name: (identifier)
      arguments: (callable_parameters)
      return_type: (parameter
        (self)))
    body: (block
      (return_statement
        (initializer_list
          (keyword_argument
            name: (identifier)
            value: (member_access
              value: (identifier)
              member: (identifier)))
          (keyword_argument
            name: (identifier)
            value: (call
              function: (identifier)
              arguments: (arguments
                (identifier))))))))
  (call
    function: (identifier)
    arguments: (arguments
      (initializer_list
        (integer)
        (keyword_argument
          name: (identifier)
          value: (string
            (string_start)
            (string_content)
            (string_end)))))))

================================================================================
Comptime: parenthesized expression
================================================================================

comptime if CurrentPlugin.exp_fn:
    return comptime (CurrentPlugin.exp_fn.value())(x)

--------------------------------------------------------------------------------

(module
  (if_statement
    condition: (member_access
      value: (identifier)
      member: (identifier))
    consequence: (block
      (return_statement
        (call
          function: (parenthesized_expression
            (member_access
              value: (identifier)
              member: (identifier)
              member: (member_call
                function: (identifier)
                arguments: (arguments))))
          arguments: (arguments
            (identifier)))))))

================================================================================
Function: type expressions
================================================================================

def _stencil_impl_gpu[
    shape_element_type: DType,
    input_shape_element_type: DType,
    //,
    rank: Int,
    stencil_rank: Int,
    stencil_axis: IndexList[stencil_rank, ...],
    simd_width: Int,
    dtype: DType,
    MapFnType: ImplicitlyCopyable
    & RegisterPassable
    & def(IndexList[stencil_rank, ...]) -> Tuple[
        IndexList[stencil_rank],
        IndexList[stencil_rank],
    ],
    MapStridesType: ImplicitlyCopyable
    & RegisterPassable
    & def(dim: Int) -> Int,
    LoadFnType: ImplicitlyCopyable
    & RegisterPassable
    & def[simd_width: Int, dtype: DType](IndexList[rank, ...]) -> SIMD[
        dtype, simd_width
    ],
    ComputeInitFnType: ImplicitlyCopyable
    & RegisterPassable
    & def[simd_width: Int]() -> SIMD[dtype, simd_width],
    ComputeFnType: ImplicitlyCopyable
    & RegisterPassable
    & def[simd_width: SIMDSize](
        IndexList[rank, ...],
        SIMD[dtype, simd_width],
        SIMD[dtype, simd_width],
    ) -> SIMD[dtype, simd_width],
    ComputeFinalizeFnType: ImplicitlyCopyable
    & RegisterPassable
    & def[simd_width: Int](
        IndexList[rank, ...], SIMD[dtype, simd_width]
    ) -> None,
](
    ctx: DeviceContext,
    shape: IndexList[rank, element_type=shape_element_type],
    input_shape: IndexList[rank, element_type=input_shape_element_type],
    map_func: MapFnType,
    map_strides_func: MapStridesType,
    load_func: LoadFnType,
    compute_init_func: ComputeInitFnType,
    compute_func: ComputeFnType,
    compute_finalize_func: ComputeFinalizeFnType,
) raises:
    pass

def compile_function[
    func: def(*args: *declared_arg_types) -> None,
](
    self,
    *,
    out result: DeviceFunction[func],
) raises:
    pass

def greet_all[G: def(String) -> None](names: List[String], greet: G):
    pass

def sync_parallelize(func: Some[def(Int) -> None]):
    pass

def destroy_with[F: def(var Self.T)](deinit self, destroy_func: F):
    pass

def bench_math2[math_f2p: def(Int, Int, /) -> Int](mut b: Bencher) raises:
    pass

def _coro_get_resume_fn(handle: AnyCoroutine) -> def(AnyCoroutine) -> None:
    return op[_type=def(AnyCoroutine) -> None](handle)

comptime Dynamic1DTileUnitFunc = def(Int, Int) -> None

def call[
    name: StaticString,
    return_type: RegisterPassable = NoneType,
    *T: AnyType,
](self, *args: *T) -> return_type:
    var v = args.get_loaded_kgen_pack()
    return self._get_func[name, def(type_of(v)) thin -> return_type]()(v)

--------------------------------------------------------------------------------

(module
  (function_declaration
    (function_signature
      name: (identifier)
      parameters: (parameters_declaration
        (constrained_parameter_decl
          name: (identifier)
          constraint: (parameter
            (identifier)))
        (constrained_parameter_decl
          name: (identifier)
          constraint: (parameter
            (identifier)))
        (infer_only_marker)
        (constrained_parameter_decl
          name: (identifier)
          constraint: (parameter
            (identifier)))
        (constrained_parameter_decl
          name: (identifier)
          constraint: (parameter
            (identifier)))
        (constrained_parameter_decl
          name: (identifier)
          constraint: (generic_parameter
            value: (identifier)
            parameters: (parameters
              (parameter
                (identifier))
              (ellipsis))))
        (constrained_parameter_decl
          name: (identifier)
          constraint: (parameter
            (identifier)))
        (constrained_parameter_decl
          name: (identifier)
          constraint: (parameter
            (identifier)))
        (constrained_parameter_decl
          name: (identifier)
          constraint: (parameter_composition
            (parameter
              (identifier))
            (parameter
              (identifier))
            (function_type
              arguments: (function_type_parameters
                (generic_parameter
                  value: (identifier)
                  parameters: (parameters
                    (parameter
                      (identifier))
                    (ellipsis))))
              return_type: (generic_parameter
                value: (identifier)
                parameters: (parameters
                  (generic_parameter
                    value: (identifier)
                    parameters: (parameters
                      (parameter
                        (identifier))))
                  (generic_parameter
                    value: (identifier)
                    parameters: (parameters
                      (parameter
                        (identifier)))))))))
        (constrained_parameter_decl
          name: (identifier)
          constraint: (parameter_composition
            (parameter
              (identifier))
            (parameter
              (identifier))
            (function_type
              arguments: (function_type_parameters
                (constrained_parameter_decl
                  name: (identifier)
                  constraint: (parameter
                    (identifier))))
              return_type: (parameter
                (identifier)))))
        (constrained_parameter_decl
          name: (identifier)
          constraint: (parameter_composition
            (parameter
              (identifier))
            (parameter
              (identifier))
            (function_type
              parameters: (parameters_declaration
                (constrained_parameter_decl
                  name: (identifier)
                  constraint: (parameter
                    (identifier)))
                (constrained_parameter_decl
                  name: (identifier)
                  constraint: (parameter
                    (identifier))))
              arguments: (function_type_parameters
                (generic_parameter
                  value: (identifier)
                  parameters: (parameters
                    (parameter
                      (identifier))
                    (ellipsis))))
              return_type: (generic_parameter
                value: (identifier)
                parameters: (parameters
                  (parameter
                    (identifier))
                  (parameter
                    (identifier)))))))
        (constrained_parameter_decl
          name: (identifier)
          constraint: (parameter_composition
            (parameter
              (identifier))
            (parameter
              (identifier))
            (function_type
              parameters: (parameters_declaration
                (constrained_parameter_decl
                  name: (identifier)
                  constraint: (parameter
                    (identifier))))
              arguments: (function_type_parameters)
              return_type: (generic_parameter
                value: (identifier)
                parameters: (parameters
                  (parameter
                    (identifier))
                  (parameter
                    (identifier)))))))
        (constrained_parameter_decl
          name: (identifier)
          constraint: (parameter_composition
            (parameter
              (identifier))
            (parameter
              (identifier))
            (function_type
              parameters: (parameters_declaration
                (constrained_parameter_decl
                  name: (identifier)
                  constraint: (parameter
                    (identifier))))
              arguments: (function_type_parameters
                (generic_parameter
                  value: (identifier)
                  parameters: (parameters
                    (parameter
                      (identifier))
                    (ellipsis)))
                (generic_parameter
                  value: (identifier)
                  parameters: (parameters
                    (parameter
                      (identifier))
                    (parameter
                      (identifier))))
                (generic_parameter
                  value: (identifier)
                  parameters: (parameters
                    (parameter
                      (identifier))
                    (parameter
                      (identifier)))))
              return_type: (generic_parameter
                value: (identifier)
                parameters: (parameters
                  (parameter
                    (identifier))
                  (parameter
                    (identifier)))))))
        (constrained_parameter_decl
          name: (identifier)
          constraint: (parameter_composition
            (parameter
              (identifier))
            (parameter
              (identifier))
            (function_type
              parameters: (parameters_declaration
                (constrained_parameter_decl
                  name: (identifier)
                  constraint: (parameter
                    (identifier))))
              arguments: (function_type_parameters
                (generic_parameter
                  value: (identifier)
                  parameters: (parameters
                    (parameter
                      (identifier))
                    (ellipsis)))
                (generic_parameter
                  value: (identifier)
                  parameters: (parameters
                    (parameter
                      (identifier))
                    (parameter
                      (identifier)))))
              return_type: (none)))))
      arguments: (callable_parameters
        (constrained_parameter_decl
          name: (identifier)
          constraint: (parameter
            (identifier)))
        (constrained_parameter_decl
          name: (identifier)
          constraint: (generic_parameter
            value: (identifier)
            parameters: (parameters
              (parameter
                (identifier))
              (named_parameter
                name: (identifier)
                value: (parameter
                  (identifier))))))
        (constrained_parameter_decl
          name: (identifier)
          constraint: (generic_parameter
            value: (identifier)
            parameters: (parameters
              (parameter
                (identifier))
              (named_parameter
                name: (identifier)
                value: (parameter
                  (identifier))))))
        (constrained_parameter_decl
          name: (identifier)
          constraint: (parameter
            (identifier)))
        (constrained_parameter_decl
          name: (identifier)
          constraint: (parameter
            (identifier)))
        (constrained_parameter_decl
          name: (identifier)
          constraint: (parameter
            (identifier)))
        (constrained_parameter_decl
          name: (identifier)
          constraint: (parameter
            (identifier)))
        (constrained_parameter_decl
          name: (identifier)
          constraint: (parameter
            (identifier)))
        (constrained_parameter_decl
          name: (identifier)
          constraint: (parameter
            (identifier))))
      effects: (function_effects
        (raises)))
    body: (block
      (pass_statement)))
  (function_declaration
    (function_signature
      name: (identifier)
      parameters: (parameters_declaration
        (constrained_parameter_decl
          name: (identifier)
          constraint: (function_type
            arguments: (function_type_parameters
              (constrained_variadic_parameter_decl
                name: (identifier)
                constraint: (variadic_parameter
                  (parameter
                    (identifier)))))
            return_type: (none))))
      arguments: (callable_parameters
        (parameter_decl
          name: (identifier))
        (keyword_only_marker)
        (constrained_parameter_decl
          name: (identifier)
          constraint: (generic_parameter
            value: (identifier)
            parameters: (parameters
              (parameter
                (identifier))))))
      effects: (function_effects
        (raises)))
    body: (block
      (pass_statement)))
  (function_declaration
    (function_signature
      name: (identifier)
      parameters: (parameters_declaration
        (constrained_parameter_decl
          name: (identifier)
          constraint: (function_type
            arguments: (function_type_parameters
              (parameter
                (identifier)))
            return_type: (none))))
      arguments: (callable_parameters
        (constrained_parameter_decl
          name: (identifier)
          constraint: (generic_parameter
            value: (identifier)
            parameters: (parameters
              (parameter
                (identifier)))))
        (constrained_parameter_decl
          name: (identifier)
          constraint: (parameter
            (identifier)))))
    body: (block
      (pass_statement)))
  (function_declaration
    (function_signature
      name: (identifier)
      arguments: (callable_parameters
        (constrained_parameter_decl
          name: (identifier)
          constraint: (generic_parameter
            value: (identifier)
            parameters: (parameters
              (function_type
                arguments: (function_type_parameters
                  (parameter
                    (identifier)))
                return_type: (none)))))))
    body: (block
      (pass_statement)))
  (function_declaration
    (function_signature
      name: (identifier)
      parameters: (parameters_declaration
        (constrained_parameter_decl
          name: (identifier)
          constraint: (function_type
            arguments: (function_type_parameters
              (parameter_member
                value: (self)
                member: (identifier))))))
      arguments: (callable_parameters
        (parameter_decl
          name: (identifier))
        (constrained_parameter_decl
          name: (identifier)
          constraint: (parameter
            (identifier)))))
    body: (block
      (pass_statement)))
  (function_declaration
    (function_signature
      name: (identifier)
      parameters: (parameters_declaration
        (constrained_parameter_decl
          name: (identifier)
          constraint: (function_type
            arguments: (function_type_parameters
              (parameter
                (identifier))
              (parameter
                (identifier))
              (positional_only_marker))
            return_type: (parameter
              (identifier)))))
      arguments: (callable_parameters
        (constrained_parameter_decl
          name: (identifier)
          constraint: (parameter
            (identifier))))
      effects: (function_effects
        (raises)))
    body: (block
      (pass_statement)))
  (function_declaration
    (function_signature
      name: (identifier)
      arguments: (callable_parameters
        (constrained_parameter_decl
          name: (identifier)
          constraint: (parameter
            (identifier))))
      return_type: (function_type
        arguments: (function_type_parameters
          (parameter
            (identifier)))
        return_type: (none)))
    body: (block
      (return_statement
        (call
          function: (subscript
            value: (identifier)
            parameters: (parameters
              (named_parameter
                name: (identifier)
                value: (function_type
                  arguments: (function_type_parameters
                    (parameter
                      (identifier)))
                  return_type: (none)))))
          arguments: (arguments
            (identifier))))))
  (comptime_statement
    left: (comptime_parameter
      name: (identifier))
    right: (function_type
      arguments: (function_type_parameters
        (parameter
          (identifier))
        (parameter
          (identifier)))
      return_type: (none)))
  (function_declaration
    (function_signature
      name: (identifier)
      parameters: (parameters_declaration
        (constrained_parameter_decl
          name: (identifier)
          constraint: (parameter
            (identifier)))
        (default_parameter_decl
          (constrained_parameter_decl
            name: (identifier)
            constraint: (parameter
              (identifier)))
          default: (parameter
            (identifier)))
        (constrained_variadic_parameter_decl
          name: (identifier)
          constraint: (parameter
            (identifier))))
      arguments: (callable_parameters
        (parameter_decl
          name: (identifier))
        (constrained_variadic_parameter_decl
          name: (identifier)
          constraint: (variadic_parameter
            (parameter
              (identifier)))))
      return_type: (parameter
        (identifier)))
    body: (block
      (assignment
        left: (identifier)
        right: (member_access
          value: (identifier)
          member: (member_call
            function: (identifier)
            arguments: (arguments))))
      (return_statement
        (member_access
          value: (identifier)
          member: (member_call
            function: (member_call
              function: (member_subscript
                value: (identifier)
                parameters: (parameters
                  (parameter
                    (identifier))
                  (function_type
                    arguments: (function_type_parameters
                      (call
                        function: (identifier)
                        arguments: (arguments
                          (identifier))))
                    effects: (function_effects
                      (thin))
                    return_type: (parameter
                      (identifier)))))
              arguments: (arguments))
            arguments: (arguments
              (identifier))))))))

================================================================================
Lambda
================================================================================

lambda: None

def a():
    var no_args = lambda -> Int: 42

    var a = lambda (x: Int) {} -> Int: x + 1

    var b = lambda [T: Intable](x: T) -> Int: Int(x) + 1

    var c = lambda [N: Int](x: Int) {} -> Int: x + N

    var d = lambda (x: Int) -> Int: x * 2 + y

    var e = lambda (x: Int) {mut list}: list.append(x)

    var f = lambda {mut list}: list.append(0)

def b():
    ptr.unsafe_write(init_with=lambda () -> Pinned: Pinned(7))

    _storage.unsafe_ptr[T]().unsafe_write(
            init_with=lambda () {ref} -> T: init_with()
        )

def c():
    var own_arg = lambda (var x: Int) {} -> Int: x + 1
    var mut_arg = lambda (mut x: Int) {}: x.__iadd__(1)

def d():
    var count = lambda (*args: Int) {} -> Int: len(args)
    var named = lambda (var **kwargs: Int) {} -> Int: len(kwargs)

def e():
    var fp = lambda (a: Int32, b: Int32) abi("C") -> Int32: a + b

def f():
    comptime whole = (lambda (x: Int) {} -> Int: x * 2)(21)

def g() raises:
    print(apply_raising(lambda (x: Int) raises -> Int: x + 1, 2))

def h():
    var f = lambda (x: Int) {} -> Int: (
        lambda (y: Int) {imm x} -> Int: y + x
    )(3)
    print(f(6))

def i():
    return _to_string_list[
        lambda (v: Span[Byte, O]) -> Int: len(v),
        lambda (v: Span[Byte, O]) -> Pointer[Byte, O]: v.unsafe_ptr(),
    ](items)

--------------------------------------------------------------------------------

(module
  (lambda
    (lambda_signature)
    body: (none))
  (function_declaration
    (function_signature
      name: (identifier)
      arguments: (callable_parameters))
    body: (block
      (assignment
        left: (identifier)
        right: (lambda
          (lambda_typed_signature
            return_type: (parameter
              (identifier)))
          body: (integer)))
      (assignment
        left: (identifier)
        right: (lambda
          (lambda_typed_signature
            arguments: (callable_parameters
              (constrained_parameter_decl
                name: (identifier)
                constraint: (parameter
                  (identifier))))
            captures: (capture_parameters)
            return_type: (parameter
              (identifier)))
          body: (binary_operator
            left: (identifier)
            right: (integer))))
      (assignment
        left: (identifier)
        right: (lambda
          (lambda_typed_signature
            parameters: (parameters_declaration
              (constrained_parameter_decl
                name: (identifier)
                constraint: (parameter
                  (identifier))))
            arguments: (callable_parameters
              (constrained_parameter_decl
                name: (identifier)
                constraint: (parameter
                  (identifier))))
            return_type: (parameter
              (identifier)))
          body: (binary_operator
            left: (call
              function: (identifier)
              arguments: (arguments
                (identifier)))
            right: (integer))))
      (assignment
        left: (identifier)
        right: (lambda
          (lambda_typed_signature
            parameters: (parameters_declaration
              (constrained_parameter_decl
                name: (identifier)
                constraint: (parameter
                  (identifier))))
            arguments: (callable_parameters
              (constrained_parameter_decl
                name: (identifier)
                constraint: (parameter
                  (identifier))))
            captures: (capture_parameters)
            return_type: (parameter
              (identifier)))
          body: (binary_operator
            left: (identifier)
            right: (identifier))))
      (assignment
        left: (identifier)
        right: (lambda
          (lambda_typed_signature
            arguments: (callable_parameters
              (constrained_parameter_decl
                name: (identifier)
                constraint: (parameter
                  (identifier))))
            return_type: (parameter
              (identifier)))
          body: (binary_operator
            left: (binary_operator
              left: (identifier)
              right: (integer))
            right: (identifier))))
      (assignment
        left: (identifier)
        right: (lambda
          (lambda_typed_signature
            arguments: (callable_parameters
              (constrained_parameter_decl
                name: (identifier)
                constraint: (parameter
                  (identifier))))
            captures: (capture_parameters
              (capture_parameter
                name: (identifier))))
          body: (member_access
            value: (identifier)
            member: (member_call
              function: (identifier)
              arguments: (arguments
                (identifier))))))
      (assignment
        left: (identifier)
        right: (lambda
          (lambda_typed_signature
            captures: (capture_parameters
              (capture_parameter
                name: (identifier))))
          body: (member_access
            value: (identifier)
            member: (member_call
              function: (identifier)
              arguments: (arguments
                (integer))))))))
  (function_declaration
    (function_signature
      name: (identifier)
      arguments: (callable_parameters))
    body: (block
      (member_access
        value: (identifier)
        member: (member_call
          function: (identifier)
          arguments: (arguments
            (keyword_argument
              name: (identifier)
              value: (lambda
                (lambda_typed_signature
                  arguments: (callable_parameters)
                  return_type: (parameter
                    (identifier)))
                body: (call
                  function: (identifier)
                  arguments: (arguments
                    (integer))))))))
      (member_access
        value: (identifier)
        member: (member_call
          function: (member_subscript
            value: (identifier)
            parameters: (parameters
              (parameter
                (identifier))))
          arguments: (arguments))
        member: (member_call
          function: (identifier)
          arguments: (arguments
            (keyword_argument
              name: (identifier)
              value: (lambda
                (lambda_typed_signature
                  arguments: (callable_parameters)
                  captures: (capture_parameters
                    (capture_parameter))
                  return_type: (parameter
                    (identifier)))
                body: (call
                  function: (identifier)
                  arguments: (arguments)))))))))
  (function_declaration
    (function_signature
      name: (identifier)
      arguments: (callable_parameters))
    body: (block
      (assignment
        left: (identifier)
        right: (lambda
          (lambda_typed_signature
            arguments: (callable_parameters
              (constrained_parameter_decl
                name: (identifier)
                constraint: (parameter
                  (identifier))))
            captures: (capture_parameters)
            return_type: (parameter
              (identifier)))
          body: (binary_operator
            left: (identifier)
            right: (integer))))
      (assignment
        left: (identifier)
        right: (lambda
          (lambda_typed_signature
            arguments: (callable_parameters
              (constrained_parameter_decl
                name: (identifier)
                constraint: (parameter
                  (identifier))))
            captures: (capture_parameters))
          body: (member_access
            value: (identifier)
            member: (member_call
              function: (identifier)
              arguments: (arguments
                (integer))))))))
  (function_declaration
    (function_signature
      name: (identifier)
      arguments: (callable_parameters))
    body: (block
      (assignment
        left: (identifier)
        right: (lambda
          (lambda_typed_signature
            arguments: (callable_parameters
              (constrained_variadic_parameter_decl
                name: (identifier)
                constraint: (parameter
                  (identifier))))
            captures: (capture_parameters)
            return_type: (parameter
              (identifier)))
          body: (call
            function: (identifier)
            arguments: (arguments
              (identifier)))))
      (assignment
        left: (identifier)
        right: (lambda
          (lambda_typed_signature
            arguments: (callable_parameters
              (constrained_variadic_parameter_decl
                name: (identifier)
                constraint: (parameter
                  (identifier))))
            captures: (capture_parameters)
            return_type: (parameter
              (identifier)))
          body: (call
            function: (identifier)
            arguments: (arguments
              (identifier)))))))
  (function_declaration
    (function_signature
      name: (identifier)
      arguments: (callable_parameters))
    body: (block
      (assignment
        left: (identifier)
        right: (lambda
          (lambda_typed_signature
            arguments: (callable_parameters
              (constrained_parameter_decl
                name: (identifier)
                constraint: (parameter
                  (identifier)))
              (constrained_parameter_decl
                name: (identifier)
                constraint: (parameter
                  (identifier))))
            effects: (function_effects
              (abi
                (string
                  (string_start)
                  (string_content)
                  (string_end))))
            return_type: (parameter
              (identifier)))
          body: (binary_operator
            left: (identifier)
            right: (identifier))))))
  (function_declaration
    (function_signature
      name: (identifier)
      arguments: (callable_parameters))
    body: (block
      (comptime_statement
        left: (comptime_parameter
          name: (identifier))
        right: (call
          function: (parenthesized_expression
            (lambda
              (lambda_typed_signature
                arguments: (callable_parameters
                  (constrained_parameter_decl
                    name: (identifier)
                    constraint: (parameter
                      (identifier))))
                captures: (capture_parameters)
                return_type: (parameter
                  (identifier)))
              body: (binary_operator
                left: (identifier)
                right: (integer))))
          arguments: (arguments
            (integer))))))
  (function_declaration
    (function_signature
      name: (identifier)
      arguments: (callable_parameters)
      effects: (function_effects
        (raises)))
    body: (block
      (call
        function: (identifier)
        arguments: (arguments
          (call
            function: (identifier)
            arguments: (arguments
              (lambda
                (lambda_typed_signature
                  arguments: (callable_parameters
                    (constrained_parameter_decl
                      name: (identifier)
                      constraint: (parameter
                        (identifier))))
                  effects: (function_effects
                    (raises))
                  return_type: (parameter
                    (identifier)))
                body: (binary_operator
                  left: (identifier)
                  right: (integer)))
              (integer)))))))
  (function_declaration
    (function_signature
      name: (identifier)
      arguments: (callable_parameters))
    body: (block
      (assignment
        left: (identifier)
        right: (lambda
          (lambda_typed_signature
            arguments: (callable_parameters
